[package]
name = "dragger"
version = "0.1.0"
authors = ["Christian Soltermann <applesauce.soltermann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libdragger = { path = "../libdragger" }
piston_window = "0.105.0"
